--- a/package.json
+++ b/package.json
@@ -1,57 +1,53 @@
 {
-  "private": true,
-  "type": "module",
-  "scripts": {
-
-    "build": "vite build",
-    "dev": "mix",
-    "watch": "mix watch",
-    "prod": "mix --production"
-  },
-
-
-
-
-
-  "devDependencies": {
-    "axios": "^1.6.4",
-    "gulp": "^5.0.0",
-    "gulp-sass": "^5.1.0",
-    "laravel-mix": "^6.0.49",
-    "laravel-vite-plugin": "^1.0",
-    "resolve-url-loader": "^5.0.0",
-    "sass": "^1.74.1",
-    "sass-loader": "^12.1.0",
-    "vite": "^5.0"
-  },
-  "name": "mytalent",
-  "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
-  "version": "1.0.0",
-  "main": "vite.config.js",
-  "directories": {
-    "test": "tests"
-  },
-  "dependencies": {
-    "asynckit": "^0.4.0",
-    "combined-stream": "^1.0.8",
-    "delayed-stream": "^1.0.0",
-    "esbuild": "^0.20.2",
-    "follow-redirects": "^1.15.6",
-    "form-data": "^4.0.0",
-    "mime-db": "^1.52.0",
-    "mime-types": "^2.1.35",
-    "nanoid": "^3.3.7",
-    "picocolors": "^1.0.0",
-    "picomatch": "^2.3.1",
-    "postcss": "^8.4.38",
-    "proxy-from-env": "^1.1.0",
-    "rollup": "^4.14.0",
-    "source-map-js": "^1.2.0",
-    "vite-plugin-full-reload": "^1.1.0"
-  },
-  "author": "",
-  "license": "ISC",
-  "keywords": []
-
-  
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "build": "vite build",
+        "dev": "mix",
+        "watch": "mix watch",
+        "prod": "mix --production"
+    },
+    "devDependencies": {
+        "@popperjs/core": "^2.11.6",
+        "@vitejs/plugin-vue": "^4.5.0",
+        "axios": "^1.6.4",
+        "bootstrap": "^5.2.3",
+        "gulp": "^5.0.0",
+        "gulp-sass": "^5.1.0",
+        "laravel-mix": "^6.0.49",
+        "laravel-vite-plugin": "^1.0",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.56.1",
+        "sass-loader": "^12.1.0",
+        "vite": "^5.0",
+        "vue": "^3.2.37"
+    },
+    "name": "mytalent",
+    "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+    "version": "1.0.0",
+    "main": "vite.config.js",
+    "directories": {
+        "test": "tests"
+    },
+    "dependencies": {
+        "asynckit": "^0.4.0",
+        "combined-stream": "^1.0.8",
+        "delayed-stream": "^1.0.0",
+        "esbuild": "^0.20.2",
+        "follow-redirects": "^1.15.6",
+        "form-data": "^4.0.0",
+        "mime-db": "^1.52.0",
+        "mime-types": "^2.1.35",
+        "nanoid": "^3.3.7",
+        "picocolors": "^1.0.0",
+        "picomatch": "^2.3.1",
+        "postcss": "^8.4.38",
+        "proxy-from-env": "^1.1.0",
+        "rollup": "^4.14.0",
+        "source-map-js": "^1.2.0",
+        "vite-plugin-full-reload": "^1.1.0"
+    },
+    "author": "",
+    "license": "ISC",
+    "keywords": []
 }
