Upload 70% of code 1pm

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "App\\Mail\\": "app/Mail/"
         }
     },
     "autoload-dev": {
@@ -65,6 +64,11 @@
             "php-http/discovery": true
         }
     },
+    
+    
     "minimum-stability": "stable",
     "prefer-stable": true
+
+    
+
 }
