Fix error of modules running, error of missing transmission lines and missing module plugs

--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,11 @@
         },
         "laravel": {
             "dont-discover": []
+        },
+        "merge-plugin": {
+            "include": [
+                "Modules/*/composer.json"
+            ]
         }
     },
     "config": {
