--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "genealabs/laravel-caffeine": "^11.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
-        "laravel/ui": "^4.5"
+        "laravel/ui": "^4.5",
+        "nwidart/laravel-modules": "^11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -22,6 +23,7 @@
     },
     "autoload": {
         "psr-4": {
+            
             "App\\": "app/",
             "Modules\\": "modules/",
             "App\\Mail\\": "app/Mail/"
@@ -65,8 +67,12 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "php-http/discovery": true
-        }
+            "php-http/discovery": true,
+            "wikimedia/composer-merge-plugin": true
+        },
+            "platform": {
+                "php": "8.1.0"
+            }
     },
     
     
