--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-debugbar": "^3.5",
         "genealabs/laravel-caffeine": "^11.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
-        "nwidart/laravel-modules": "^11.0",
-        "barryvdh/laravel-debugbar": "^3.5"
+        "nwidart/laravel-modules": "^11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
